--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -11,7 +11,7 @@
     <header class="bg-dark">
         <nav class="row m-0 d-flex align-items-center">
             <a class="col-2" href="{{ path('home') }}">
-                <img src="images/re7-logo.png" alt="logo" />
+                <img src="../images/re7-logo.png" alt="logo" />
             </a>
             <div class="col-7 align-items-center desktopNav">
                 {# Desktop nav #}
@@ -59,6 +59,24 @@
     </header>
     <main>
         <section id="planningSection">
+
+            <div class="d-flex justify-content-center" id="selectContainer">
+                <select id="planningSelect">
+                    {% for owner in owners %}
+                        <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
+                            {{ owner['owner'] }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <p class="text-center mt-5" id="createPlanningText">
+                Pas de planning ?
+                <a href="{{ path('create_planning') }}" class="text-primary">
+                    Créez le votre
+                </a>
+            </p>
+
             <div class="row mb-3 border-bottom border-warning">
                 <div class="col-3"></div>
                 <div class="col-4 d-flex justify-content-center text-warning pb-3 fw-bold whenName">
@@ -68,40 +86,16 @@
                     Soir
                 </div>
             </div>
-            {% for day in days %}
-                <div class="dayContainer row mb-4 border-bottom border-warning pb-3">
-                    <div class="col-3 text-warning dayName">
-                        {{ day.name }}
-                    </div>
-                    <div class="col-4 d-flex justify-content-evenly align-items-center recipeName">
-                        {{ day.middayRecipe.name ?? '-' }}
-                        {% if day.middayRecipe.name is defined %}
-                            <span class="text-warning">{{ day.middayPersons }}</span>
-                            <a href="{{ path('delete_recipe_in_planning', { 'day' : day.name, 'when' : 'midi' }) }}">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-x-circle-fill text-danger deleteRecipeBtn" viewBox="0 0 16 16">
-                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
-                                </svg>
-                            </a>
-                        {% endif %}
-                    </div>
-                    <div class="col-4 d-flex justify-content-evenly align-items-center recipeName">
-                        {{ day.eveningRecipe.name ?? '-' }}
-                        {% if day.eveningRecipe.name is defined %}
-                        <span class="text-warning">{{ day.eveningPersons }}</span>
-                        <a href="{{ path('delete_recipe_in_planning', { 'day' : day.name, 'when' : 'soir' }) }}">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-x-circle-fill text-danger deleteRecipeBtn" viewBox="0 0 16 16">
-                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
-                            </svg>
-                        </a>
-                        {% endif %}
-                    </div>
-                </div>
-            {% endfor %}
+            <div id="planningContainer">
+                {% include "planning/_planning.html.twig" %}
+            </div>
         </section>
+        
     </main>
 {% endblock %}
 
 {% block javascripts %}
 	{{ parent() }}
 	<script src="{{ asset('js/header.js') }}"></script>
+	<script src="{{ asset('js/planning.js') }}"></script>
 {% endblock %}
