--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -86,7 +86,11 @@
 			<form class="mt-2 mx-auto" method="post">
 				<p class="text-center"><input type="text" id="recipeName" readOnly name="recipeName" class="mt-5 text-center"></input></p>
 				<div class="d-flex justify-content-around align-items-center">
-					Prévu
+					<select id="owner" name="owner" required>
+						{% for owner in owners %}
+							<option value="{{ owner['owner'] }}">{{ owner['owner'] }}</option>
+						{% endfor %}
+					</select>
 					<select id="day" name="day" required>
 						<option value="Lundi">Lundi</option>
 						<option value="Mardi">Mardi</option>
@@ -101,7 +105,7 @@
 						<option value="soir">Soir</option>
 					</select>
 					<label for="for">Pour</label>
-					<input type="number" id="for" name="for" min="1" max="15" required>
+					<input type="number" id="for" name="for" min="1" max="15" value="4" required>
 					<button type="submit" class="btn btn-sm btn-outline-warning">Ok</button>
 				</div>
 			</form>
