--- a/templates/shopping/index.html.twig
+++ b/templates/shopping/index.html.twig
@@ -11,7 +11,7 @@
     <header class="bg-dark">
         <nav class="row m-0 d-flex align-items-center">
             <a class="col-2" href="{{ path('home') }}">
-                <img src="images/re7-logo.png" alt="logo" />
+                <img src="../images/re7-logo.png" alt="logo" />
             </a>
             <div class="col-7 align-items-center desktopNav">
                 {# Desktop nav #}
@@ -59,6 +59,17 @@
     </header>
     <main>
         <section id="shoppingSection" class="row d-flex justify-content-center mt-5">
+
+            <div class="d-flex justify-content-center mb-5" id="selectContainer">
+                <select id="planningSelect">
+                    {% for owner in owners %}
+                        <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
+                            {{ owner['owner'] }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
+
             <div class="row mb-3 border-bottom border-warning pb-3">
                 <div class="col-3 text-warning d-flex justify-content-center">Rayon</div>
                 <div class="col-3 text-warning d-flex justify-content-center">Aliment</div>
@@ -92,4 +103,5 @@
 {% block javascripts %}
 	{{ parent() }}
 	<script src="{{ asset('js/header.js') }}"></script>
+	<script src="{{ asset('js/shopping.js') }}"></script>
 {% endblock %}
