--- a/templates/recipe/updateRecipe.html.twig
+++ b/templates/recipe/updateRecipe.html.twig
@@ -65,8 +65,14 @@
 			{{ form_label(form.name, 'Nom') }}
 			{{ form_widget(form.name) }}
 
+			{{ form_label(form.type, 'Type') }}
+			{{ form_widget(form.type) }}
+
 			{{ form_label(form.category, 'Catégorie') }}
 			{{ form_widget(form.category) }}
+
+			{{ form_label(form.cookingType, 'Cuisson') }}
+			{{ form_widget(form.cookingType) }}
 
 			{{ form_label(form.duration, 'Durée') }}
 			{{ form_widget(form.duration) }}
