--- a/templates/recipe/recipeDetails.html.twig
+++ b/templates/recipe/recipeDetails.html.twig
@@ -66,17 +66,12 @@
 				</svg>
 			</a>
 		</h2>
-		<p class="text-center mb-2 recipeInfo">{{ recipe.category|capitalize }}</p>
-		<div class="row d-flex justify-content-center mb-2">
-			<div class="col-4 text-center recipeInfo">
-				{{ recipe.duration }} minutes
-			</div>
-		</div>
-		<div class="row d-flex justify-content-center mb-4">
-			<div class="col-4 text-center recipeInfo">	
-				{{ recipe.persons }} personnes
-			</div>
-		</div>
+		<p class="text-center mb-3 recipeInfo"><span class="text-warning">Type : </span>{{ recipe.type|capitalize }}</p>
+		<p class="text-center mb-3 recipeInfo"><span class="text-warning">Catégorie : </span>{{ recipe.category.name }}</p>
+		<p class="text-center mb-3 recipeInfo"><span class="text-warning">Cuisson : </span>{{ recipe.cookingType }}</p>
+		<p class="text-center mb-3 recipeInfo"><span class="text-warning">Durée : </span>{{ recipe.duration }} minutes</p>
+		<p class="text-center mb-5 recipeInfo"><span class="text-warning">Pour : </span>{{ recipe.persons }} personnes</p>
+
 		<section class="recipeFoodsSection">
 			<div class="row border-bottom border-warning pb-3 mb-3">
 				<div class="col-5 text-warning d-flex justify-content-center">Aliment</div>
