--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -75,7 +75,7 @@
                                     {{ food.name }}
                                 </div>
                                 <div class="col d-flex justify-content-center">
-                                    {{ food.section }}
+                                    {{ food.section.name }}
                                 </div>
                             </div>
                         {% endfor %}
@@ -91,8 +91,15 @@
                     {% endfor %}
                     {{ form_label(form.name, 'Nom') }}
                     {{ form_widget(form.name) }}
-
-                    {{ form_label(form.section, 'Rayon') }}
+                    
+                    <div class="d-flex">
+                        {{ form_label(form.section, 'Rayon') }}
+                        <a href="{{ path('add_section') }}" class="ms-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill text-success" viewBox="0 0 16 16">
+                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                            </svg>
+                        </a>
+                    </div>
                     {{ form_widget(form.section) }}
 
                     <p class="text-center mt-3">
