--- a/templates/planning/_planning.html.twig
+++ b/templates/planning/_planning.html.twig
@@ -7,7 +7,7 @@
 			{{ day.middayRecipe.name ?? '-' }}
 			{% if day.middayRecipe.name is defined %}
 				<span class="text-warning">{{ day.middayPersons }}</span>
-				<a href="{{ path('delete_recipe_in_planning', { 'day' : day.name, 'when' : 'midi', 'owner' : day.owner }) }}">
+				<a href="{{ path('delete_recipe_in_planning', { 'day' : day.name, 'when' : 'midi', 'persons' : day.middayPersons, 'owner' : day.owner }) }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-x-circle-fill text-danger deleteRecipeBtn" viewBox="0 0 16 16">
 						<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
 					</svg>
@@ -18,7 +18,7 @@
 			{{ day.eveningRecipe.name ?? '-' }}
 			{% if day.eveningRecipe.name is defined %}
 			<span class="text-warning">{{ day.eveningPersons }}</span>
-			<a href="{{ path('delete_recipe_in_planning', { 'day' : day.name, 'when' : 'soir', 'owner' : day.owner }) }}">
+			<a href="{{ path('delete_recipe_in_planning', { 'day' : day.name, 'when' : 'soir', 'persons' : day.eveningPersons, 'owner' : day.owner }) }}">
 				<svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-x-circle-fill text-danger deleteRecipeBtn" viewBox="0 0 16 16">
 					<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
 				</svg>
