--- a/templates/recipe/addRecipe.html.twig
+++ b/templates/recipe/addRecipe.html.twig
@@ -72,18 +72,32 @@
 			{{ form_widget(form.name) }}
 			{{ form_errors(form.name) }}
 
-			{{ form_label(form.type, 'Type') }}
+			<div class="d-flex">
+				{{ form_label(form.type, 'Type') }}
+				<a href="{{ path('add_type') }}" class="mx-2">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill text-success" viewBox="0 0 16 16">
+						<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+					</svg>
+				</a>
+			</div>
 			{{ form_widget(form.type) }}
 			{{ form_errors(form.type) }}
 
-			{{ form_label(form.cookingType, 'Type de cuisson') }}
+			<div class="d-flex">
+				{{ form_label(form.cookingType, 'Type de cuisson') }}
+				<a href="{{ path('add_cookingType') }}" class="mx-2">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill text-success" viewBox="0 0 16 16">
+						<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+					</svg>
+				</a>
+			</div>
 			{{ form_widget(form.cookingType) }}
 			{{ form_errors(form.cookingType) }}
 
 			<div class="d-flex">
 				{{ form_label(form.category, 'Catégorie') }}
 				<a href="{{ path('add_category') }}" class="mx-2">
-					<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle-fill text-success" viewBox="0 0 16 16">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill text-success" viewBox="0 0 16 16">
 						<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
 					</svg>
 				</a>
