--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -60,26 +60,36 @@
     <main>
         <div class="row mt-5">
             <section class="col-12 col-lg-6 foodsSection mb-5">
-                    <div class="row border-bottom border-warning pb-3 mb-3">
-                        <div class="col d-flex justify-content-center text-warning">
-                            Aliment
-                        </div>
-                        <div class="col d-flex justify-content-center text-warning">
-                            Rayon
-                        </div>
+                <div class="row border-bottom border-warning pb-3 mb-3">
+                    <div class="col-4 d-flex justify-content-center text-warning">
+                        Aliment
                     </div>
-                    <div class="foodRowsContainer">
-                        {% for food in foods %}
-                            <div class="row mb-2">
-                                <div class="col d-flex justify-content-center">
-                                    {{ food.name }}
-                                </div>
-                                <div class="col d-flex justify-content-center">
-                                    {{ food.section.name }}
-                                </div>
+                    <div class="col-4 d-flex justify-content-center text-warning">
+                        Rayon
+                    </div>
+                </div>
+                {% for message in app.flashes('danger') %}
+                    <div id="alertContainer" class="alert alert-danger bg-dark border-0 text-danger" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+                <div class="foodRowsContainer">
+                    {% for food in foods %}
+                        <div class="row mb-2">
+                            <div class="col-4 d-flex justify-content-center">
+                                {{ food.name }}
                             </div>
-                        {% endfor %}
-                    </div>
+                            <div class="col-4 d-flex justify-content-center">
+                                {{ food.section.name }}
+                            </div>
+                            <a href="{{ path('delete_food', { 'id' : food.id }) }}" class="col-1 d-flex justify-content-center" onclick="return confirm('Êtes-vous sûre de vouloir supprimer cet aliment ?')">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill text-danger" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+                                </svg>
+                            </a>
+                        </div>
+                    {% endfor %}
+                </div>
             </section>
             {# add food form #}
             <section class="formSection col-12 col-lg-6 d-flex justify-content-center align-items-center">
