add recipe page is now part of the header

--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -15,6 +15,10 @@ main {
 	text-overflow: ellipsis;
 }
 
+.addToPlanningBtn:hover {
+	cursor: pointer;
+}
+
 #addToPlanningSection {
 	display: none;
 }
