We can now delete planning from planning page

--- a/public/css/planning.css
+++ b/public/css/planning.css
@@ -40,6 +40,11 @@ main {
 	font-size: 12px;
 }
 
+form {
+	display: flex;
+	flex-direction: column;
+}
+
 @media screen and (min-width: 600px) and (max-width: 799px) {
 	#planningSection {
 		width: 90vw;
