--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -66,22 +66,38 @@
     <main>
         <section id="planningSection">
 
-            <div class="d-flex justify-content-center" id="selectContainer">
-                <select id="planningSelect">
-                    {% for owner in owners %}
-                        <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
-                            {{ owner['owner'] }}
-                        </option>
-                    {% endfor %}
-                </select>
+            <div class="row d-flex justify-content-evenly">
+                <div class="col-4 d-flex flex-column align-items-center">
+                    <div class="d-flex justify-content-center" id="selectContainer">
+                        <select id="planningSelect">
+                            {% for owner in owners %}
+                                <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
+                                    {{ owner['owner'] }}
+                                </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <p class="text-center mt-5" id="createPlanningText">
+                        Pas de planning ?
+                        <a href="{{ path('create_planning') }}" class="text-primary">
+                            Créez le votre
+                        </a>
+                    </p>
+                </div>
+                <div class="col-4 d-flex flex-column align-items-center">
+                    <p class="text-danger">Supprimer un planning</p>
+                    <form method="post">
+                        <select id="deletePlanningOf" name="deletePlanningOf" class="mb-3">
+                            {% for owner in owners %}
+                                <option value="{{ owner['owner'] }}">{{ owner['owner'] }}</option>
+                            {% endfor %}
+                        </select>
+                        <p class="text-center">
+                            <button type="submit" class="btn btn-outline-danger btn-sm" onclick="return confirm('Êtes-vous sûre de vouloir supprimer ce planning ?')">OK</button>
+                        </p>
+                    </form>
+                </div>
             </div>
-
-            <p class="text-center mt-5" id="createPlanningText">
-                Pas de planning ?
-                <a href="{{ path('create_planning') }}" class="text-primary">
-                    Créez le votre
-                </a>
-            </p>
 
             <div class="row mb-3 border-bottom border-warning">
                 <div class="col-3"></div>
