--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -66,8 +66,21 @@
     <main>
         <section id="planningSection">
 
-            <div class="row d-flex justify-content-evenly">
-                <div class="col-4 d-flex flex-column align-items-center">
+            <div class="row" id="planningHeader">
+                {# left header #}
+                <div class="col-4 d-flex flex-column align-items-center text-center">
+                    <p class="text-primary">Créer un planning</p>
+                    {{ form_start(form) }}
+
+                        {{ form_widget(form.owner, { 'attr' : { 'class' : 'border-primary createPlanningInput' }}) }}
+
+                        <p class="text-center mt-3">
+                            <button type="submit" class="btn btn-outline-primary btn-sm">OK</button>
+                        </p>
+                    {{ form_end(form) }}
+                </div>
+                {# central header #}
+                <div class="col-4 d-flex justify-content-center align-items-start">
                     <div class="d-flex justify-content-center" id="selectContainer">
                         <select id="planningSelect">
                             {% for owner in owners %}
@@ -77,17 +90,12 @@
                             {% endfor %}
                         </select>
                     </div>
-                    <p class="text-center mt-5" id="createPlanningText">
-                        Pas de planning ?
-                        <a href="{{ path('create_planning') }}" class="text-primary">
-                            Créez le votre
-                        </a>
-                    </p>
                 </div>
-                <div class="col-4 d-flex flex-column align-items-center">
+                {# right header #}
+                <div class="col-4 d-flex flex-column align-items-center text-center">
                     <p class="text-danger">Supprimer un planning</p>
                     <form method="post">
-                        <select id="deletePlanningOf" name="deletePlanningOf" class="mb-3">
+                        <select id="deletePlanningOf" name="deletePlanningOf" class="mb-3 border-danger">
                             {% for owner in owners %}
                                 <option value="{{ owner['owner'] }}">{{ owner['owner'] }}</option>
                             {% endfor %}
