--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -96,13 +96,13 @@
         </nav>
     </header>
     <main>
-        <div class="row mt-5">
-            <section class="col-12 col-lg-6 foodsSection mb-5">
+        <div class="row row-cols-1 row-cols-xl-2 mt-5 mainRow">
+            <section class="col foodsSection mb-5">
                 <div class="row border-bottom border-warning pb-3 mb-3">
-                    <div class="col-4 d-flex justify-content-center text-warning">
+                    <div class="col-5 d-flex justify-content-center text-warning">
                         Aliment
                     </div>
-                    <div class="col-4 d-flex justify-content-center text-warning">
+                    <div class="col-5 d-flex justify-content-center text-warning">
                         Rayon
                     </div>
                 </div>
@@ -114,10 +114,10 @@
                 <div class="foodRowsContainer">
                     {% for food in foods %}
                         <div class="row mb-2">
-                            <div class="col-4 d-flex justify-content-center">
+                            <div class="col-5 d-flex justify-content-center">
                                 {{ food.name }}
                             </div>
-                            <div class="col-4 d-flex justify-content-center">
+                            <div class="col-5 d-flex justify-content-center">
                                 {{ food.section.name }}
                             </div>
                             <a href="{{ path('update_food', { 'id' : food.id }) }}" class="col-1 d-flex justify-content-center">
@@ -135,7 +135,7 @@
                 </div>
             </section>
             {# add food form #}
-            <section class="formSection col-12 col-lg-6 d-flex justify-content-center align-items-center">
+            <section class="formSection col d-flex justify-content-center align-items-center">
                 {{ form_start(form) }}
                     {% for message in app.flashes('success') %}
                         <div id="alertContainer" class="alert alert-success bg-dark border-0 text-center text-success" role="alert">
