filters in home page are now dynamically linked with entities

--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -104,27 +104,20 @@
 				<select id="categorySelector">
 					<option value="" selected>Toutes catégories</option>
 					{% for category in categories %}
-						<option value="{{ category.id }}">{{ category.name|capitalize }}</option>
+						<option value="{{ category.id }}">{{ category.name }}</option>
 					{% endfor %}
 				</select>
 				<select id="cookingTypeSelector" class="ms-4">
 					<option value="" selected>Toutes cuissons</option>
-					<option value="Robot_cuiseur">Robot_cuiseur</option>
-					<option value="Four">Four</option>
-					<option value="Sans_cuisson">Sans_cuisson</option>
-					<option value="Vapeur">Vapeur</option>
-					<option value="Gaz">Gaz</option>
-					<option value="Autocuiseur">Autocuiseur</option>
-					<option value="Autre">Autre</option>
+					{% for cookingType in cookingTypes %}
+						<option value="{{ cookingType.id }}">{{ cookingType.name }}</option>
+					{% endfor %}
 				</select>
 				<select id="typeSelector" class="ms-4">
-					<option value="" disabled selected hidden>Type</option>
-					<option value="">Tous</option>
-					<option value="Entrée">Entrée</option>
-					<option value="Plat">Plat</option>
-					<option value="Dessert">Dessert</option>
-					<option value="Sauce">Sauce</option>
-					<option value="Autre">Autre</option>
+					<option value="" selected>Tous types</option>
+					{% for type in types %}
+						<option value="{{ type.id }}">{{ type.name }}</option>
+					{% endfor %}
 				</select>
 			</section>
 			<section id="recipesSection">
