--- a/templates/recipe/_recipesContent.html.twig
+++ b/templates/recipe/_recipesContent.html.twig
@@ -1,15 +1,17 @@
 {% if recipes|length > 0 %}
 	{% for recipe in recipes %}
 		<div class="recipeContainer row fs-3 mb-2">
-			<div class="col-10 recipeNameCol">
+			<div class="col-10 recipeNameCol d-flex align-items-center">
 				<a href="{{ path('recipe_details', { 'id' : recipe.id }) }}" class="text-decoration-none text-white">
 					{{ recipe.name }}
 				</a>
 			</div>
 			<div class="col-2 d-flex justify-content-end align-items-center">
-				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" id="{{ recipe.id }}" onclick="addToPlanning('{{ recipe.name }}')" class="bi bi-cart-plus-fill text-warning addToPlanningBtn" viewBox="0 0 16 16">
-					<path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zM8.5 8.5V10H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V11H6a.5.5 0 0 1 0-1h1.5V8.5a.5.5 0 0 1 1 0z"/>
-				</svg>
+				<span class="stopResponsive">
+					<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" id="{{ recipe.id }}" onclick="addToPlanning('{{ recipe.name }}')" class="bi bi-cart-plus-fill text-warning addToPlanningBtn" viewBox="0 0 16 16">
+						<path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2zM8.5 8.5V10H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V11H6a.5.5 0 0 1 0-1h1.5V8.5a.5.5 0 0 1 1 0z"/>
+					</svg>
+				</span>
 				<a href="{{ path('delete_recipe', { 'id' : recipe.id }) }}" onclick="return confirm('Êtes-vous sûre de vouloir supprimer cette recette ?')">
 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-circle-fill text-danger ms-3" viewBox="0 0 16 16">
 						<path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
