--- a/templates/recipe/recipes.html.twig
+++ b/templates/recipe/recipes.html.twig
@@ -133,7 +133,7 @@
 		</p>
 
 		<section id="addToPlanningSection">
-			<form class="mt-2 mx-auto" method="post">
+			<form class="mx-auto" method="post">
 				<p class="text-center"><input type="text" id="recipeName" readOnly name="recipeName" class="text-center"></input></p>
 				<div class="d-flex justify-content-around align-items-center">
 					<select id="owner" name="owner" required>
