--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -96,50 +96,49 @@
         </nav>
     </header>
     <main>
-        <section id="planningSection">
+        <section class="row d-flex justify-content-evenly" id="planningHeader">
+            {# left header #}
+            <div class="col-3 d-flex flex-column align-items-center text-center headerPart">
+                <p class="text-primary planningTitle">Créer un planning</p>
+                {{ form_start(form) }}
 
-            <div class="row" id="planningHeader">
-                {# left header #}
-                <div class="col-4 d-flex flex-column align-items-center text-center">
-                    <p class="text-primary planningTitle">Créer un planning</p>
-                    {{ form_start(form) }}
+                    {{ form_widget(form.owner, { 'attr' : { 'class' : 'border-primary createPlanningInput' }}) }}
 
-                        {{ form_widget(form.owner, { 'attr' : { 'class' : 'border-primary createPlanningInput' }}) }}
-
-                        <p class="text-center mt-3">
-                            <button type="submit" class="btn btn-outline-primary btn-sm">OK</button>
-                        </p>
-                    {{ form_end(form) }}
-                </div>
-                {# central header #}
-                <div class="col-4 d-flex justify-content-center align-items-start">
-                    <div class="d-flex justify-content-center" id="selectContainer">
-                        <select id="planningSelect">
-                            {% for owner in owners %}
-                                <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
-                                    {{ owner['owner'] }}
-                                </option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
-                {# right header #}
-                <div class="col-4 d-flex flex-column align-items-center text-center">
-                    <p class="text-danger planningTitle">Supprimer un planning</p>
-                    <form method="post">
-                        <select id="deletePlanningOf" name="deletePlanningOf" class="mb-3 border-danger">
-                            <option value="" selected hidden disabled></option>
-                            {% for owner in owners %}
-                                <option value="{{ owner['owner'] }}">{{ owner['owner'] }}</option>
-                            {% endfor %}
-                        </select>
-                        <p class="text-center">
-                            <button type="submit" class="btn btn-outline-danger btn-sm" onclick="return confirm('Êtes-vous sûre de vouloir supprimer ce planning ?')">OK</button>
-                        </p>
-                    </form>
+                    <p class="text-center mt-3">
+                        <button type="submit" class="btn btn-outline-primary btn-sm">OK</button>
+                    </p>
+                {{ form_end(form) }}
+            </div>
+            {# central header #}
+            <div class="col-3 d-flex justify-content-center align-items-start headerPart">
+                <div class="d-flex justify-content-center" id="selectContainer">
+                    <select id="planningSelect">
+                        {% for owner in owners %}
+                            <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
+                                {{ owner['owner'] }}
+                            </option>
+                        {% endfor %}
+                    </select>
                 </div>
             </div>
+            {# right header #}
+            <div class="col-3 d-flex flex-column align-items-center text-center headerPart">
+                <p class="text-danger planningTitle">Supprimer un planning</p>
+                <form method="post">
+                    <select id="deletePlanningOf" name="deletePlanningOf" class="mb-3 border-danger">
+                        <option value="" selected hidden disabled></option>
+                        {% for owner in owners %}
+                            <option value="{{ owner['owner'] }}">{{ owner['owner'] }}</option>
+                        {% endfor %}
+                    </select>
+                    <p class="text-center">
+                        <button type="submit" class="btn btn-outline-danger btn-sm" onclick="return confirm('Êtes-vous sûre de vouloir supprimer ce planning ?')">OK</button>
+                    </p>
+                </form>
+            </div>
+        </section>
 
+        <section id="planningSection">
             <div class="row mb-3 border-bottom border-warning">
                 <div class="col-3"></div>
                 <div class="col-4 d-flex justify-content-center text-warning pb-3 fw-bold whenName">
@@ -153,7 +152,6 @@
                 {% include "planning/_planning.html.twig" %}
             </div>
         </section>
-        
     </main>
 {% endblock %}
 
