--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -110,7 +110,7 @@
                 {{ form_end(form) }}
             </div>
             {# central header #}
-            <div class="col-3 d-flex justify-content-center align-items-start headerPart">
+            <div class="col-3 d-flex justify-content-center headerPart h-25">
                 <div class="d-flex justify-content-center" id="selectContainer">
                     <select id="planningSelect">
                         {% for owner in owners %}
