--- a/public/css/planning.css
+++ b/public/css/planning.css
@@ -22,9 +22,8 @@ main {
 }
 
 #planningSelect {
-	background-color: #212528;
+	background-color: #2b2e30;
 	border: none;
-	color: white;
 	font-size: 16px;
 }
 
@@ -64,14 +63,16 @@ select {
 	background-color: #2b2e30;
 	border-radius: 15px;
 	padding: 20px;
-	box-shadow: 3px 5px 10px 0px rgba(255,255,255,0.18);
+	border: 1px solid rgb(77, 76, 76);
+	box-shadow: 3px 5px 10px 0px rgba(0, 0, 0, 1);
 }
 
 .headerPart {
 	background-color: #2b2e30;
 	border-radius: 15px;
 	padding: 7px;
-	box-shadow: 3px 5px 10px 0px rgba(255,255,255,0.18);
+	border: 1px solid rgb(77, 76, 76);
+	box-shadow: 3px 5px 10px 0px rgba(0, 0, 0, 1);
 }
 
 
