--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -37,7 +37,8 @@ main {
 	background-color: #2b2e30;
 	border-radius: 15px;
 	padding: 7px;
-	box-shadow: 3px 5px 10px 0px rgba(255,255,255,0.18);
+	border: 1px solid rgb(77, 76, 76);
+	box-shadow: 3px 5px 10px 0px rgba(0, 0, 0, 1);
 }
 
 input,
