--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -97,7 +97,7 @@
     </header>
     <main>
         <div class="row row-cols-1 row-cols-xl-2 mt-5 mainRow">
-            <section class="col foodsSection mb-5">
+            <section class="col foodsSection mb-5 me-5">
                 <div class="row border-bottom border-warning pb-3 mb-3">
                     <div class="col-5 d-flex justify-content-center text-warning">
                         Aliment
