--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -97,29 +97,42 @@
     </header>
     <main>
         <section class="row d-flex justify-content-evenly" id="planningHeader">
+            {# top header #}
+            <div class="d-flex justify-content-center mb-5" id="selectContainer">
+                <select id="planningSelect">
+                    {% for owner in owners %}
+                        <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
+                            {{ owner['owner'] }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
             {# left header #}
             <div class="col-3 d-flex flex-column align-items-center text-center headerPart">
-                <p class="text-primary planningTitle">Créer un planning</p>
+                <p class="text-warning planningTitle">Créer un planning</p>
                 {{ form_start(form) }}
 
-                    {{ form_widget(form.owner, { 'attr' : { 'class' : 'border-primary createPlanningInput' }}) }}
+                    {{ form_widget(form.owner, { 'attr' : { 'class' : 'border-warning createPlanningInput' }}) }}
 
                     <p class="text-center mt-3">
-                        <button type="submit" class="btn btn-outline-primary btn-sm">OK</button>
+                        <button type="submit" class="btn btn-outline-warning btn-sm">OK</button>
                     </p>
                 {{ form_end(form) }}
             </div>
             {# central header #}
-            <div class="col-3 d-flex justify-content-center headerPart h-25">
-                <div class="d-flex justify-content-center" id="selectContainer">
-                    <select id="planningSelect">
+            <div class="col-3 d-flex flex-column align-items-center text-center headerPart">
+                <p class="text-secondary planningTitle">Nettoyer un planning</p>
+                <form method="post">
+                    <select id="cleanPlanningOf" name="cleanPlanningOf" class="mb-3 border-secondary">
+                        <option value="" selected hidden disabled></option>
                         {% for owner in owners %}
-                            <option value="{{ owner['owner'] }}" {{ owner['owner'] == planningOwner ? 'selected' : null }}>
-                                {{ owner['owner'] }}
-                            </option>
+                            <option value="{{ owner['owner'] }}">{{ owner['owner'] }}</option>
                         {% endfor %}
                     </select>
-                </div>
+                    <p class="text-center">
+                        <button type="submit" class="btn btn-outline-secondary btn-sm" onclick="return confirm('Êtes-vous sûre de vouloir nettoyer ce planning ?')">OK</button>
+                    </p>
+                </form>
             </div>
             {# right header #}
             <div class="col-3 d-flex flex-column align-items-center text-center headerPart">
